# sql_agent_langchain

./: .env.example  .gitignore  README.md  pyproject.toml  templates.py
notebooks/: 01_minimal_agent.ipynb
